oriterm_core/tests/vttest/snapshots/vttest__menu5__97x33_05_led_05.snap
---
source: oriterm_core/tests/vttest/menu5.rs
expression: text
---
                                                                                                 
                                                                                                 
                                                                                                 
                                                                                                 
                                                                                                 
                                                                                                 
                                                                                                 
                                                                                                 
                                                                                                 
These LEDs ("lamps") on the keyboard should be on: L1                                            
                                                                                                 
Push <RETURN>
