oriterm_core/tests/vttest/snapshots/vttest__menu5__97x33_05_repeat_01.snap
---
source: oriterm_core/tests/vttest/menu5.rs
expression: text
---
                                                                                                 
                                                                                                 
                                                                                                 
                                                                                                 
                                                                                                 
                                                                                                 
                                                                                                 
                                                                                                 
                                                                                                 
Test of the AUTO REPEAT feature                                                                  
                                                                                                 
Hold down an alphanumeric key for a while, then push RETURN.                                     
Auto Repeat OFF:
